[package]
name = "locus-cli"
version = "1.4.2"
license = "MIT"
readme = "README.md"
authors = ["Aethdv (aethrdv@gmail.com)"]
description = "A configurable CPU stress testing tool with multiple computational workloads."
repository = "https://github.com/Aethdv/Locus"
keywords = ["cpu", "benchmark", "stress-test", "performance", "testing"]
categories = ["command-line-utilities", "development-tools::profiling"]
edition = "2024"
rust-version = "1.88.0"

include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]

[dependencies]
clap = { version = "4.5.50", features = ["derive", "string"] }
ctrlc = "3.5.0"
num_cpus = "1.17.0"
anstyle = "1.0.13"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_System_SystemInformation",
  "Win32_Foundation",
] }

[dev-dependencies]
criterion = "0.7.0"

[[bin]]
name = "locus"
path = "src/main.rs"

[[bench]]
name = "workload_bench"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.bench]
inherits = "release"
